# qt_junk

./: .gitignore  README.txt  cmake-configure-all.sh
98-qml/: CMakeLists.txt  README.txt  main.cpp
QtApps/: QtApps.sln
QtApps/ExtraDialogs/: ExtraDialogs.vcxproj  ExtraDialogs.vcxproj.filters  errorlogdialog.h  simpledialog.ui
QtApps/app1/: app1.cpp  app1.h  app1.ui  app1.vcxproj  app1.vcxproj.filters  main.cpp
QtVsTools/: QtVsTools.sln  README.txt
QtVsTools/ExtraDialogs/: ExtraDialogs.cpp  ExtraDialogs.h  ExtraDialogs.vcxproj  ExtraDialogs.vcxproj.filters  errorlogdialog.cpp  errorlogdialog.h  errorlogdialog.ui  extradialogs_global.h  simpledialog.cpp  simpledialog.h
QtVsTools/app1/: app1.cpp  app1.h  app1.ui  app1.vcxproj  app1.vcxproj.filters
QtVsTools/common/: DebuggingConsole.h
QtVsTools/html_renderer_q5/: example.html  html_renderer_q5.cpp  html_renderer_q5.h  html_renderer_q5.qrc  html_renderer_q5.ui  html_renderer_q5.vcxproj  html_renderer_q5.vcxproj.filters  main.cpp  renderdialogtoo.cpp  renderdialogtoo.h  renderdialogtoo.ui
QtVsTools/qt_basic/: README.md  main.cpp  qt_basic.cpp  qt_basic.h  qt_basic.qrc  qt_basic.ui  qt_basic.vcxproj  qt_basic.vcxproj.filters
ammeraal/: .editorconfig  CMakeLists.txt  README.md
ammeraal/1.1/: CMakeLists.txt  simpledraw.cpp  simpledraw.h  simpledraw.pro
ammeraal/1.3/: CMakeLists.txt  slotdemo.cpp  slotdemo.h  slotdemo.pro
ammeraal/1.3a/: CMakeLists.txt  changeline.cpp  changeline.h  changeline.pro
ammeraal/1.4/: CMakeLists.txt  calculate.cpp  calculate.h  calculate.pro
ammeraal/1.5/: CMakeLists.txt  menus.cpp  menus.h  menus.pro
ammeraal/1.6/: CMakeLists.txt  threaddemo.cpp  threaddemo.h  threaddemo.pro  threaddemomain.cpp
ammeraal/1.7/: CMakeLists.txt  threadprogress.cpp  threadprogress.h  threadprogress.pro  threadprogressmain.cpp
ammeraal/2.1/: CMakeLists.txt  drawpolygon.cpp  drawpolygon.pro  drawpolygonmain.cpp
ammeraal/2.2/: CMakeLists.txt  drawpolygon.cpp  drawpolygon.h  drawpolygontrias.cpp  drawpolygontrias.h  drawpolygontrias.pro  drawpolygontriasmain.cpp  points.h  triangulate.cpp
ammeraal/2.3/: CMakeLists.txt  scene.cpp  scene.h  scene.pro
ammeraal/2.4/: CMakeLists.txt  crankshaft.cpp  crankshaft.h  crankshaft.pro
ammeraal/3.1/: CMakeLists.txt  cubewireframe.cpp  cubewireframe.h  cubewireframe.pro  cubewireframemain.cpp
ammeraal/3.2/: CMakeLists.txt  wireframe.cpp  wireframe.h  wireframe.pro  wireframemain.cpp
ammeraal/3.3/: CMakeLists.txt  hfaces.cpp  hfaces.h  hfaces.pro  hfacesmain.cpp
ammeraal/3.4/: CMakeLists.txt  hlines.cpp  hlines.h  hlines.pro  hlinesmain.cpp
ammeraal/common/: CMakeLists.txt  basic3d.cpp  basic3d.h  triangulate.cpp  triangulate.h
q_app1/: main_window.ui
q_app2/: CMakeLists.txt  DebuggingConsole.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  q_app2_en_US.ts  renderareatoo.cpp  renderareatoo.h  renderareatoo.ui
q_app2/q_app2/: CMakeLists.txt  mainwindow.ui  q_app2_en_US.ts
q_load_image_in_label/: CMakeLists.txt  load_image_in_label.cpp  load_image_in_label.h  resources.qrc
q_load_image_in_scene/: CMakeLists.txt  load_image_in_scene.cpp  load_image_in_scene.h
q_load_image_in_scene/images/: Oysta-28.tif
qc-proj1/: CMakeLists.txt  README.md  aboutdialog.ui  imagegriddialog.cpp  imagegriddialog.h  imagegriddialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  onlinesourcesheet.cpp  onlinesourcesheet.h  onlinesourcesheet.ui  qc-proj1_en_US.ts
qt-sql-model/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  showtabledialog.cpp  showtabledialog.h  showtabledialog.ui
qt_app3/: CMakeLists.txt  main.cpp  qt_app3_ru_RU.ts
qt_book/05_drawing_shapes/: 05_drawing_shapes.pro  customwidget.cpp  customwidget.h
qt_book/06-qwidget_desktop_sql/: 06-qwidget_desktop_sql.pro  README.txt  customwidget.cpp  customwidget.h
qt_book/97-qml/: CMakeLists.txt  main.cpp
qt_book/console_app/: main.cpp
qt_book/hello_world/: CMakeLists.txt
qt_book/qml-01/: button.qml  qml-01.pro  textinput.qml  triangle.qml  two_rectangles.qml
qt_book/qwidget_app_2/: customwidget.cpp  customwidget.h
qt_book/qwidget_desktop/: customwidget.cpp  customwidget.h  qwidget_desktop.pro
qt_html_renderer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt_tab_control/: .clang-format  2lines.txt  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  onlinesourcesmodel.cpp  onlinesourcesmodel.h  qt_tab_control.code-workspace  resources.qrc  tab_dialog.cpp  tab_dialog.h  tab_dialog.ui  tabdialogtoo.cpp  tabdialogtoo.h  tabdialogtoo.ui
qt_tab_control_sort/: README.txt  main.cpp  qt_tab_control_sort.pro
rasterwindow/: CMakeLists.txt  main.cpp  rasterwindow.cpp  rasterwindow.h  rasterwindow.pro
table_view/table_view/: CMakeLists.txt  dialog.cpp  dialog.ui  main.cpp  main_dialog.cpp  main_dialog.h  main_dialog.ui  tablemodel.cpp  tablemodel.h  tableview.cpp  tableview.h
